que no se vean las claves
que no se vean las claves

--- a/sftp-config.json
+++ b/sftp-config.json
@@ -15,8 +15,8 @@
     "confirm_overwrite_newer": false,
     
     "host": "107.170.67.138",
-    "user": "root",
-    "password": "a9,g}d2QCwAYJssm",
+    "user": "",
+    "password": "",
     //"port": "22",
     
     "remote_path": "/var/www/",
